RESOLVED FIXED48004
No longer soft-link zlib
https://bugs.webkit.org/show_bug.cgi?id=48004
Summary No longer soft-link zlib
mitz
Reported 2010-10-20 13:40:32 PDT
Patch forthcoming
Attachments
Remove Windows-speciific code to soft-link zlib (3.62 KB, patch)
2010-10-20 13:45 PDT, mitz
no flags
Patch (5.23 KB, patch)
2010-10-28 09:24 PDT, mitz
aroben: review-
Patch (5.97 KB, patch)
2010-10-28 09:36 PDT, mitz
aroben: review+
mitz
Comment 1 2010-10-20 13:45:38 PDT
Created attachment 71332 [details] Remove Windows-speciific code to soft-link zlib
mitz
Comment 2 2010-10-20 13:47:48 PDT
Comment on attachment 71332 [details] Remove Windows-speciific code to soft-link zlib Oops, need to actually hard-link it.
mitz
Comment 3 2010-10-28 09:24:50 PDT
Adam Roben (:aroben)
Comment 4 2010-10-28 09:28:06 PDT
Comment on attachment 72195 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=72195&action=review > WebKit2/win/WebKit2.vcproj:367 > /> > <Tool > Name="VCLinkerTool" > + AdditionalDependencies="zlib.lib" This should be added to WebKit2Common.vsprops instead. Sorry for leading you astray earlier!
mitz
Comment 5 2010-10-28 09:36:18 PDT
Adam Roben (:aroben)
Comment 6 2010-10-28 09:51:52 PDT
Comment on attachment 72197 [details] Patch r=me
mitz
Comment 7 2010-10-28 09:54:05 PDT
Eric Seidel (no email)
Comment 8 2010-11-10 14:14:51 PST
Attachment 72197 [details] was posted by a committer and has review+, assigning to Dan Bernstein for commit.
Note You need to log in before you can comment on or make changes to this bug.