No longer soft-link zlib https://bugs.webkit.org/show_bug.cgi?id=48004

Reviewed by Adam Roben.

WebCore: 

* platform/graphics/WOFFFileFormat.cpp:
(WebCore::convertWOFFToSfnt): Removed Windows-speciific code to soft-link
zlib.

WebKit2: 

* win/WebKit2Common.vsprops: Added zlib.lib to AdditionalDependencies.

LayoutTests: 

* platform/win/Skipped: Enabled fast/css/font-face-woff.html.



git-svn-id: svn://svn.chromium.org/blink/trunk@70785 bbb929c8-8fbe-4397-9dbb-9b2b20218538